; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_adau17x1.c_adau17x1_set_micbias_voltage.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_adau17x1.c_adau17x1_set_micbias_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }
%struct.adau = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@ADAU17X1_MICBIAS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adau17x1_set_micbias_voltage(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.adau*, align 8
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %8 = call %struct.adau* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %7)
  store %struct.adau* %8, %struct.adau** %6, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %11 [
    i32 128, label %10
    i32 129, label %10
  ]

10:                                               ; preds = %2, %2
  br label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %22

14:                                               ; preds = %10
  %15 = load %struct.adau*, %struct.adau** %6, align 8
  %16 = getelementptr inbounds %struct.adau, %struct.adau* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @ADAU17X1_MICBIAS, align 4
  %19 = load i32, i32* %5, align 4
  %20 = shl i32 %19, 2
  %21 = call i32 @regmap_write(i32 %17, i32 %18, i32 %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %14, %11
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local %struct.adau* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1

declare dso_local i32 @regmap_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
